--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,16 @@
 	<link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
 	<link rel="manifest" href="/site.webmanifest">
 
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-GRQ79WLTGS"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-GRQ79WLTGS');
+	</script>
+
 	%sveltekit.head%
 </head>
 
